#7219 Signature Pad is not Responsive on Mobile Screens Fixes #7219

--- a/src/signaturepad.scss
+++ b/src/signaturepad.scss
@@ -32,4 +32,5 @@
     top: 0;
     left: 0;
     object-fit: cover;
+    width: 100%;
 }
